--- a/community/server/pom.xml
+++ b/community/server/pom.xml
@@ -294,6 +294,22 @@
 
     <dependency>
       <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-helpers</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-fs</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.neo4j</groupId>
       <artifactId>neo4j-bolt</artifactId>
       <version>${project.version}</version>
       <type>test-jar</type>
