--- a/advanced/management/pom.xml
+++ b/advanced/management/pom.xml
@@ -80,7 +80,7 @@
 
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-io</artifactId>
+      <artifactId>neo4j-fs</artifactId>
       <version>${project.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
