--- a/community/bolt/pom.xml
+++ b/community/bolt/pom.xml
@@ -85,7 +85,7 @@
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-io</artifactId>
+      <artifactId>neo4j-fs</artifactId>
       <version>${project.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
