--- a/community/cypher/pom.xml
+++ b/community/cypher/pom.xml
@@ -270,7 +270,14 @@
       </dependency>
       <dependency>
         <groupId>org.neo4j</groupId>
-        <artifactId>neo4j-io</artifactId>
+        <artifactId>neo4j-fs</artifactId>
+        <version>${project.version}</version>
+        <type>test-jar</type>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.neo4j</groupId>
+        <artifactId>neo4j-helpers</artifactId>
         <version>${project.version}</version>
         <type>test-jar</type>
         <scope>test</scope>
