--- a/community/neo4j-harness/pom.xml
+++ b/community/neo4j-harness/pom.xml
@@ -84,7 +84,7 @@
 
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-io</artifactId>
+      <artifactId>neo4j-fs</artifactId>
       <version>${project.version}</version>
       <type>test-jar</type>
     </dependency>
