--- a/enterprise/metrics/pom.xml
+++ b/enterprise/metrics/pom.xml
@@ -150,7 +150,14 @@
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-io</artifactId>
+      <artifactId>neo4j-fs</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+      <type>test-jar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-lifecycle</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
       <type>test-jar</type>
