--- a/community/cypher/cypher/pom.xml
+++ b/community/cypher/cypher/pom.xml
@@ -185,7 +185,7 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-cypher-compiler-2.3</artifactId>
-      <version>2.3.2-SNAPSHOT</version>
+      <version>2.3.1</version>
       <exclusions>
         <exclusion>
           <groupId>org.neo4j</groupId>
