--- a/enterprise/metrics/pom.xml
+++ b/enterprise/metrics/pom.xml
@@ -155,6 +155,13 @@
       <scope>test</scope>
       <type>test-jar</type>
     </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-core-edge</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+      <type>test-jar</type>
+    </dependency>
 
     <dependency>
       <groupId>io.dropwizard.metrics</groupId>
