--- a/enterprise/core-edge/pom.xml
+++ b/enterprise/core-edge/pom.xml
@@ -61,7 +61,7 @@
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-kernel</artifactId>
             <version>${project.version}</version>
-            <type>test-jar</type>
+            <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
 
@@ -93,21 +93,21 @@
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-io</artifactId>
             <scope>test</scope>
-            <type>test-jar</type>
+            <classifier>tests</classifier>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-fs</artifactId>
             <scope>test</scope>
-            <type>test-jar</type>
+            <classifier>tests</classifier>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-helpers</artifactId>
             <scope>test</scope>
-            <type>test-jar</type>
+            <classifier>tests</classifier>
             <version>${project.version}</version>
         </dependency>
 
@@ -115,7 +115,7 @@
         <groupId>org.neo4j</groupId>
         <artifactId>neo4j-logging</artifactId>
         <version>${project.version}</version>
-        <type>test-jar</type>
+        <classifier>tests</classifier>
         <scope>test</scope>
       </dependency>
 
