--- a/manual/cypher/cypher-docs/pom.xml
+++ b/manual/cypher/cypher-docs/pom.xml
@@ -81,7 +81,7 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-kernel</artifactId>
-      <type>test-jar</type>
+      <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -101,7 +101,7 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-cypher</artifactId>
-      <type>test-jar</type>
+      <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -114,13 +114,13 @@
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-cypher-frontend-3.0</artifactId>
       <version>${project.version}</version>
-      <type>test-jar</type>
+      <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
      <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-fs</artifactId>
-      <type>test-jar</type>
+      <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -133,7 +133,7 @@
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-enterprise-kernel</artifactId>
       <version>${project.version}</version>
-      <type>test-jar</type>
+      <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
 
@@ -192,7 +192,7 @@
                   <groupId>org.neo4j</groupId>
                   <artifactId>neo4j-io</artifactId>
                   <version>${project.version}</version>
-                  <type>test-jar</type>
+                  <classifier>tests</classifier>
                 </dependency>
                 <dependency>
                   <groupId>org.hsqldb</groupId>
