--- a/stresstests/pom.xml
+++ b/stresstests/pom.xml
@@ -75,7 +75,7 @@
       <artifactId>neo4j-io</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
-      <type>test-jar</type>
+      <classifier>tests</classifier>
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
@@ -88,7 +88,7 @@
       <artifactId>neo4j-kernel</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
-      <type>test-jar</type>
+      <classifier>tests</classifier>
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
@@ -101,7 +101,7 @@
       <artifactId>neo4j-backup</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
-      <type>test-jar</type>
+      <classifier>tests</classifier>
     </dependency>
   </dependencies>
 </project>
