--- a/manual/cypher/pom.xml
+++ b/manual/cypher/pom.xml
@@ -38,7 +38,7 @@
         <groupId>org.neo4j</groupId>
         <artifactId>neo4j-cypher</artifactId>
         <version>${neo4j.version}</version>
-        <type>test-jar</type>
+        <classifier>tests</classifier>
       </dependency>
     </dependencies>
   </dependencyManagement>
