--- a/community/graphdb-api/pom.xml
+++ b/community/graphdb-api/pom.xml
@@ -72,6 +72,11 @@ the relevant Commercial Agreement.
       <artifactId>neo4j-collections</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-primitive-collections</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
