--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j-wrapper.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j-wrapper.conf
@@ -37,6 +37,13 @@ wrapper.java.additional=-XX:hashCode=5
 # Try reducing the heap memory, if this flag degrades performance.
 wrapper.java.additional=-XX:+AlwaysPreTouch
 
+# Trust that non-static final fields are really final, allowing more optimisations.
+# NOTE: Disable this if you are adding extensions or depencies that may use reflection or serialization to
+# change the value of final fields!
+wrapper.java.additional=-XX:+UnlockExperimentalVMOptions
+wrapper.java.additional=-XX:+TrustFinalNonStaticFields
+
+# Disable explicit garbage collection, which is occasionally invoked by the JDK itself.
 wrapper.java.additional=-XX:+DisableExplicitGC
 
 # Uncomment the following lines to enable garbage collection logging
