--- a/manual/manual/Makefile
+++ b/manual/manual/Makefile
@@ -14,7 +14,7 @@ make_dir                   = $(tools_dir)/make
 
 include $(make_dir)/context-manual.make
 
-manpage_list = "neo4j server" "neo4j-installer server" "neo4j-arbiter server" "neo4j-shell shell" "neo4j-backup backup" "neo4j-import import-tool"
+manpage_list = "neo4j server" "neo4j-installer server" "neo4j-shell shell" "neo4j-backup backup" "neo4j-import import-tool"
 
 webhelp_dist: initialize install-extensions manpages copy-images docbook docbook-html year-check
 # cleanup
