--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j-wrapper.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j-wrapper.conf
@@ -79,3 +79,4 @@ wrapper.name=neo4j
 # Other Neo4j system properties
 #********************************************************************
 wrapper.java.additional=-Dneo4j.ext.udc.source=#{neo4j.ext.udc.source}
+wrapper.java.additional=-Dorg.neo4j.cluster.logdirectory=data/log
