--- a/enterprise/pom.xml
+++ b/enterprise/pom.xml
@@ -41,6 +41,7 @@
     <module>server-enterprise</module>
     <module>enterprise-performance-tests</module>
     <module>neo4j-harness-enterprise</module>
+    <module>management</module>
   </modules>
 
   <licenses>
