--- a/community/kernel/pom.xml
+++ b/community/kernel/pom.xml
@@ -154,6 +154,10 @@ the relevant Commercial Agreement.
               <packages>org.neo4j.graphdb:org.neo4j.graphdb.*</packages>
             </group>
             <group>
+              <title>Procedures</title>
+              <packages>org.neo4j.procedure:org.neo4j.procedure.*</packages>
+            </group>
+            <group>
               <title>Helpers</title>
               <packages>org.neo4j.helpers:org.neo4j.helpers.*</packages>
             </group>
