--- a/manual/javadocs/pom.xml
+++ b/manual/javadocs/pom.xml
@@ -24,7 +24,8 @@
     <docs-plugin.skip>true</docs-plugin.skip>
     <attach-javadoc-phase>package</attach-javadoc-phase>
     <attach-test-jar-phase>none</attach-test-jar-phase>
-    <doclint-groups>all</doclint-groups>
+    <!-- Temporary fix, doclint-groups should be "all". -->
+    <doclint-groups>reference</doclint-groups>
   </properties>
 
   <scm>
@@ -36,7 +37,98 @@
   <dependencies>
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-enterprise</artifactId>
+      <artifactId>neo4j-function</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-logging</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-slf4j</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-backup</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-com</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-ha</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-lucene-index</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-graph-algo</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-kernel</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-graphdb-api</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-jmx</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-management</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-cypher</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-cypher</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
@@ -44,6 +136,7 @@
       <groupId>org.neo4j</groupId>
       <artifactId>server-api</artifactId>
       <version>${project.version}</version>
+      <classifier>sources</classifier>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -76,66 +169,23 @@ the relevant Commercial Agreement.
   <build>
     <plugins>
       <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
+        <artifactId>maven-dependency-plugin</artifactId>
         <executions>
           <execution>
-            <id>copy-dependency-sources</id>
-            <phase>${attach-javadoc-phase}</phase>
+            <id>unpack-dependency-sources</id>
+            <phase>package</phase>
             <goals>
-              <goal>copy-resources</goal>
+              <goal>unpack-dependencies</goal>
             </goals>
             <configuration>
+              <classifier>sources</classifier>
+              <includeClassifiers>sources</includeClassifiers>
+              <excludeTransitive>true</excludeTransitive>
+              <useSubDirectoryPerArtifact>false</useSubDirectoryPerArtifact>
+              <stripVersion>true</stripVersion>
+              <excludes>META-INF,META-INF/**</excludes>
+              <type>jar</type>
               <outputDirectory>${project.build.directory}/javadoc-sources</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>${project.build.directory}/../../../community/function/src/main/java/</directory>
-                  <filtering>false</filtering>
-                </resource>
-                <resource>
-                  <directory>${project.build.directory}/../../../community/logging/src/main/java/</directory>
-                  <filtering>false</filtering>
-                </resource>
-                <resource>
-                  <directory>${project.build.directory}/../../../community/neo4j-slf4j/src/main/java/</directory>
-                  <filtering>false</filtering>
-                </resource>
-                <resource>
-                  <directory>${project.build.directory}/../../../enterprise/backup/src/main/java/</directory>
-                  <filtering>false</filtering>
-                </resource>
-                <resource>
-                  <directory>${project.build.directory}/../../../enterprise/com/src/main/java/</directory>
-                  <filtering>false</filtering>
-                </resource>
-                <resource>
-                  <directory>${project.build.directory}/../../../enterprise/ha/src/main/java/</directory>
-                  <filtering>false</filtering>
-                </resource>
-                <resource>
-                  <directory>${project.build.directory}/../../../community/lucene-index/src/main/java/</directory>
-                  <filtering>false</filtering>
-                </resource>
-                <resource>
-                  <directory>${project.build.directory}/../../../community/graph-algo/src/main/java/</directory>
-                  <filtering>false</filtering>
-                </resource>
-                <resource>
-                  <directory>${project.build.directory}/../../../community/kernel/src/main/java/</directory>
-                  <filtering>false</filtering>
-                </resource>
-                <resource>
-                  <directory>${project.build.directory}/../../../community/jmx/src/main/java/</directory>
-                  <filtering>false</filtering>
-                </resource>
-                <resource>
-                  <directory>${project.build.directory}/../../../community/cypher/cypher/src/main/java/</directory>
-                  <filtering>false</filtering>
-                </resource>
-                <resource>
-                  <directory>${project.build.directory}/../../../community/server-api/src/main/java/</directory>
-                  <filtering>false</filtering>
-                </resource>
-              </resources>
             </configuration>
           </execution>
         </executions>
@@ -159,7 +209,7 @@ the relevant Commercial Agreement.
               <windowtitle>Neo4j ${project.version} API</windowtitle>
               <show>public</show>
               <subpackages>
-                org.neo4j.backup:org.neo4j.cypher.export:org.neo4j.cypher.javacompat:org.neo4j.graphalgo:org.neo4j.graphdb:org.neo4j.helpers:org.neo4j.helpers.collection:org.neo4j.index:org.neo4j.jmx:org.neo4j.management:org.neo4j.server:org.neo4j.tooling:org.neo4j.unsafe.batchinsert:org.neo4j.logging
+                org.neo4j.backup:org.neo4j.cypher.export:org.neo4j.cypher.javacompat:org.neo4j.graphalgo:org.neo4j.graphdb:org.neo4j.helpers:org.neo4j.helpers.collection:org.neo4j.index:org.neo4j.jmx:org.neo4j.management:org.neo4j.server:org.neo4j.tooling:org.neo4j.unsafe.batchinsert:org.neo4j.logging:org.neo4j.procedure
               </subpackages>
               <excludePackageNames>
                 *.impl.*:*.internal.*:org.neo4j.helpers.progress:org.neo4j.logging.async
@@ -197,6 +247,10 @@ the relevant Commercial Agreement.
                 <group>
                   <title>Import</title>
                   <packages>org.neo4j.unsafe.batchinsert</packages>
+                </group>
+                <group>
+                  <title>Procedures</title>
+                  <packages>org.neo4j.procedure</packages>
                 </group>
                 <group>
                   <title>Tooling</title>
