--- a/manual/cypher/cypher-docs/pom.xml
+++ b/manual/cypher/cypher-docs/pom.xml
@@ -81,6 +81,10 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-kernel</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-kernel</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
